# tools

./: .codacy.yaml  .gitattributes  .gitignore  .travis.yml  README.md  build.gradle  credentials.properties.enc  run.sh  settings.gradle
command-validation-sample/: build.gradle
common/: build.gradle
entity-lookup-sample/: build.gradle
failures-gen/: build.gradle
failures-gen-sample/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
grpc-compiler-plugin/: .gitignore  CMakeLists.txt  README.md  build.gradle
grpc-compiler-plugin-sample/: README.md  build.gradle
grpc-compiler-plugin-sample/src/main/webapp/: index.html
grpc-compiler-plugin-sample/src/main/webapp/WEB-INF/: web.xml
grpc-compiler-plugin-sample/src/main/webapp/scripts/: Constants.js  app.js  bytebuffer.js  long.js  protobuf.js  require.js
grpc-compiler-plugin/src/main/cpp/: codegen.h  handler_printer.cpp  handler_printer.h  js_printer.cpp  js_printer.h  main.cpp  service_printer.cpp  service_printer.h
javadoc/: README.md  build.gradle
javadoc-checker/plugin/src/main/resources/: AllowedFQNformat.java  AllowedFqnFormats.java  ClassWithoutJavadocs.java  MultipleWrongFqnLinks.java  WrongFQNformat.java
javadocs-checker/plugin/src/main/resources/: AllowedFQNformat  (+3 more)
map-proto-to-java-sample/: build.gradle
proto-lookup-plugin/: build.gradle
protobuf-plugin/: build.gradle
scripts/: publish.gradle  publish_artifacts.sh
validators-gen-sample/: build.gradle
validators-gen-sample/src/main/proto/: changes.proto
validators-gen-sample/src/test/proto/: attributes.proto  changes.proto
(+258 files in other folders)
